--- a/app/src/main/res/layout/activity_proximity.xml
+++ b/app/src/main/res/layout/activity_proximity.xml
@@ -7,13 +7,14 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:ignore="HardcodedText"
-    tools:context=".MainActivity">
+    tools:context=".ProximityAct">
 
-    <Button
-        android:id="@+id/proximity"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/val"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="proximity"
-        android:textColor="@color/white"/>
+        android:text="value"
+        android:textSize="30sp"
+        android:textColor="@color/black"/>
 
 </LinearLayout>
